--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Deleted</th>
           </tr>
         </thead>
         <tbody>
@@ -32,6 +34,8 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><a href="/urls/<%=id%>"><button class="btn btn-info" type="button">Edit</button></a></td>
+              <td><form method="POST" action="/urls/<%=id%>/delete"><button class="btn btn-danger" type="submit">Delete</button></form></td>
             </tr>
           <% } %>
         </tbody>
