--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,8 +18,23 @@
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          Short URL ID: <a href="/u/<%=id%>"><%= id %></a>
         </p>
+        <hr />
+        
+        <form class="form-inline " action="/urls/<%=id%>" method="POST">
+          <div class="form-group mb-2">
+            <label for="longURL">Update URL:</label>
+            <input
+              class="form-control"
+              type="text"
+              name="longURL"
+              placeholder="http://"
+              style="width: 300px; margin: 1em"
+            />
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
       </div>
       <div class="card-footer text-muted"></div>
     </div>
