read cookie and display it

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,15 +16,20 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <form class="form-inline" action="/login" method="POST"><input
-              class="form-control"
-              type="text"
-              name="username"
-              placeholder="user@mail.ca"
-              style="width: 300px; margin: 1em"
-            />
+        <% if(username) {%> 
+          Logged in as <%=username %>!<a href="/logout" class="btn btn-danger">Logout</a>
+        <%}else{%>
+        <form class="form-inline" action="/login" method="POST">
+          <input
+            class="form-control"
+            type="text"
+            name="username"
+            placeholder="user@mail.ca"
+            style="width: 300px; margin: 1em"
+          />
           <button type="submit" class="btn btn-primary">Login</button>
-          </form>
+        </form>
+        <%}%>
       </div>
     </div>
   </nav>
