--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -16,21 +16,26 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <% if(username) {%> 
-          Logged in as <%=username %>!<a href="/logout" class="btn btn-danger">Logout</a>
-        <%}else{%>
-        <form class="form-inline" action="/login" method="POST">
-          <input
-            class="form-control"
-            type="text"
-            name="username"
-            placeholder="user@mail.ca"
-            style="width: 300px; margin: 1em"
-          />
-          <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-        <%}%>
       </div>
     </div>
+    <% if(username) {%>
+  <div class=""">
+    Logged in as <%=username %>!<a href="/logout" class="btn btn-danger"
+      >Logout</a
+    >
+  </div>
+  <%}else{%>
+  <form class="form-inline" action="/login" method="POST">
+    <input
+      class="form-control mr-sm-2"
+      type="text"
+      name="username"
+      placeholder="user@mail.ca"
+      style="width: 300px; margin: 1em"
+    />
+    <button type="submit" class="btn btn-primary my-2 my-sm-0">Login</button>
+  </form>
+  <%}%>
   </nav>
+  
 </header>
