--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,15 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -18,24 +11,14 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if(username) {%>
-  <div class=""">
-    Logged in as <%=username %>!<a href="/logout" class="btn btn-danger"
-      >Logout</a
-    >
-  </div>
-  <%}else{%>
-  <form class="form-inline" action="/login" method="POST">
-    <input
-      class="form-control mr-sm-2"
-      type="text"
-      name="username"
-      placeholder="user@mail.ca"
-      style="width: 300px; margin: 1em"
-    />
-    <button type="submit" class="btn btn-primary my-2 my-sm-0">Login</button>
-  </form>
-  <%}%>
-  </nav>
-  
+    <% if(locals.user) {%>
+      <div class=""">
+    Logged in as <%=user.email %>!<a href=" /logout" class="btn btn-danger">Logout</a>
+      </div>
+      <%}else{%>
+        <a href="/login"><button class="btn btn-info">Login</button></a>
+        <a href="/register"><button class="btn btn-info">Register</button></a>
+        <%}%>
+     </nav>
+
 </header>
