--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,7 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
               <td><a href="/urls/<%=id%>"><button class="btn btn-info" type="button">Edit</button></a></td>
               <td><form method="POST" action="/urls/<%=id%>/delete"><button class="btn btn-danger" type="submit">Delete</button></form></td>
             </tr>
