--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -22,7 +22,7 @@
         </p>
         <hr />
         
-        <form class="form-inline " action="/urls/<%=id%>" method="POST">
+        <form class="form-inline " action="/urls/<%=id%>?_method=PUT" method="POST">
           <div class="form-group mb-2">
             <label for="longURL">Update URL:</label>
             <input
